--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <body>
         wowie website!!!
 
-        <a href="projects.html">Projects:</a>
+        <a href="minecraft.html">Projects:</a>
     </body>
 </html>
